# OOP-task

./: README.md  pyproject.toml
oop_task/: Aspirant.py  Bachelor.py  Student.py  test.py
